kuber/notes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx-deployment
spec:
    selector:
        matchLabels:
           app: nginx
    replicas: 2
    template:
        labels:
           app: nginx
        spec:
           containers:
           - name: nginx
             image: quay.io/jitesoft/nginx
             ports:
               - containerPort: 80
