kuber/notes/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-ingress
spec:
  rules:
    - host: kubeserve.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubeserve
                port:
                  number: 80
  
    - host: app.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpd
                port:
                  number: 80
